@@ -1,5 +1,15 @@
 2015-02-23  Corinna Vinschen  <corinna@vinschen.de>
 
+	* cygwait.h (enum cw_wait_mask): Add cw_sig_restart.  Add comments
+	to explain the meaning of the possible values.
+	* cygwait.cc (is_cw_sig_restart): Define.
+	(is_cw_sig_handle): Check for cw_sig_restart as well.
+	(cygwait): Restart always if cw_sig_restart is set.
+	* thread.cc (pthread::join): Call cygwait with cw_sig_restart flag
+	to avoid having to handle signals at all.
+
+2015-02-23  Corinna Vinschen  <corinna@vinschen.de>
+
 	* cygwait.cc (cygwait): Move setting res to WAIT_SIGNALED to clarify
 	when WAIT_SIGNALED is returned to the caller.
 
